2017-09-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Pass '-lz' link argument as a dependency of libimap instead of through
	add_global_link_arguments

	* libbalsa/imap/meson.build: add the dependency.
	* meson.build: do not use add_global_link_arguments.

2017-09-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use 'glib-genmarshal --header --body' to generate marshal.c
	files, instead of catting a header line to the file

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:

2017-09-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not include internal dependencies in declare_dependency()

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:
	* libinit_balsa/meson.build:
	* libnetclient/meson.build:
	* libnetclient/test/meson.build:
	* src/meson.build:

2017-09-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: adapt the meson build to reflect the GNOME option
	changes.
	* meson_options.txt: ditto.

2017-09-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove obsolete option to build with deprecated GnomeKeyring

	* configure.ac: do not check for the lib and do not define
	HAVE_GNOME_KEYRING and friends.
	* libbalsa/imap-server.c (libbalsa_imap_server_new_from_config):
	do not use it.
	* libbalsa/server.c (libbalsa_server_load_config),
	(libbalsa_server_save_config): ditto.
	* libbalsa/server.h: ditto.
	* src/balsa-app.c (ask_password_real): ditto.
	* src/folder-conf.c (folder_conf_imap_node): ditto.
	* src/mailbox-conf.c (create_imap_mailbox_dialog): ditto.

2017-09-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	HAVE_GNOME is redundant

	* configure.ac: do not define it.
	* libbalsa/filter-file.c (libbalsa_condition_new_2_0): do not
	refer to it.
	* src/toolbar-factory.c (balsa_toolbar_model_finalize),
	(tm_gsettings_change_cb), (balsa_toolbar_model_new),
	(tm_default_style): use GSettings without checking it.

2017-09-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Allow installing the help files
